--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --bottom-bg: #282828;
 }
 
- {
+ *{
     border: 0.5px dashed blue;
 }
 
@@ -17,6 +17,10 @@
 
 .white {
     color: white;
+}
+
+.d-flex {
+    display: flex;
 }
 
 
@@ -28,8 +32,11 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
 }
+/* TOP */
 
-/* SIDEBAR */
+
+
+    /* SIDEBAR */
 .sidebar {
     padding-top: 1rem;
     width: 230px;
@@ -49,7 +56,7 @@ body {
     }
 
     nav {
-        padding-left: 0.5rem;
+        padding-left: 1rem;
         display: flex;
         flex-direction: column;
     }
@@ -80,7 +87,6 @@ body {
 
     h2 {
         font-size: 14px;
-        margin-top: 2rem;
     }
 
     h3 {
@@ -94,14 +100,18 @@ body {
             vertical-align: middle;
         }
     }
-
     .playlist {
+        flex-grow: 1;
+    }
+    .playlist-names {
         font-size: 12px;
         line-height: 1.5rem;
-        flex-grow: 1;
     }
 
     .profile {
+        padding-bottom: 1rem;
+        width: 200px;
+        
     
         .download {
             font-size: 12px;
@@ -109,7 +119,7 @@ body {
         }
 
         .user {
-            font-size: 14px;
+            font-size: 12px;
 
             .fa-solid {
                 font-size: 27px ;
@@ -124,6 +134,137 @@ body {
         }
     }
 }
+
+/* BOTTOM */
+
+.bottom {
+    background-color: var(--bottom-bg);
+    width: 100%;
+    height: 10vh;
+    color: var(--main-light);
+    
+
+    
+    
+    .song-bar {
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+
+        .song {
+            vertical-align: middle;
+           
+
+            ul {
+                padding-inline-start: 0px;
+                
+        
+                li {
+                    list-style: none;
+                    margin-right: 0.25rem; 
+                }
+        
+                img {
+                    width: 42px;                  
+                }
+
+                .icon {
+                    align-self: center;
+                    margin-left: 1rem;
+
+                    i {
+                        padding: 0.5rem;
+                    }
+                }
+            }
+
+            span {
+                font-size: 10px;
+            }
+
+            strong {
+                font-size: 12px;
+            }
+        }
+
+        .player {
+        
+            .music-icon {
+                display: flex;  
+                justify-content: center;
+            
+                i {
+                padding-left: 1rem;
+                padding-right: 1rem;
+                color: white;
+                font-size: 16px;
+                align-self: center;
+                }
+
+                .fa-circle-play {
+                    font-size: 28px;
+                } 
+            }
+        }
+
+        .time {
+        display: flex;
+        align-items: center;
+
+        .minute {
+            font-size: 8px;      
+        }
+
+        .bar {
+            height: 5px;
+            width: 400px;
+            background-color: var(--main-light);
+            border-radius: 50px;
+            margin: 1rem;
+        }
+
+        .bar:after {
+            content: '';
+            width: 20%;
+            background-color: white;
+            display: block;
+            height: 100%;
+        }
+        }
+
+        .settings {
+            display: flex;
+
+            .logo-settings {
+                align-self: center;
+                
+                i {
+                    padding: 0.5rem;
+                }
+            }
+            
+            .bar-volume {
+                height: 5px;
+                width: 120px;
+                background-color: var(--main-light);
+                border-radius: 50px;
+                margin: 1rem;
+            }
+
+            .bar-volume:after {
+                content: '';
+                width: 20%;
+                background-color: white;
+                display: block;
+                height: 100%;
+            }
+
+            }
+        }
+    }
+
+}
     
 /* META QUERY */
 
@@ -136,12 +277,19 @@ body {
     .show {
         display: none;
     }
+
+    
     .sidebar {
         width: 50px;
-        text-align: center;
+    
+        nav {
+            padding-left: 0.5rem;
+            text-align: center;  
+        }
 
         .logo {
             width: 30px;
+            text-align: center;
             .logo-big {
                 display: none;
             }
@@ -150,12 +298,23 @@ body {
             }
         }
 
+        ul {
+            flex-grow: 1;
+        }
+
         .profile {
             text-align: center;
             line-height: 2rem;
+            padding-bottom: 1rem;
+            width: 40px;
+            
+            
         }
 
 
         
     }
+
+    
  }
+
