--- a/style.css
+++ b/style.css
@@ -154,12 +154,10 @@ body {
 
         .song {
             vertical-align: middle;
-           
-
+ 
             ul {
                 padding-inline-start: 0px;
-                
-        
+
                 li {
                     list-style: none;
                     margin-right: 0.25rem; 
@@ -264,16 +262,66 @@ body {
         }
     }
 
-}
+
     
 /* META QUERY */
 
+/* M */
 
+@media screen and (max-width: 876px) {
+
+    .top {
+    min-width: 828px;
+    width: 100%;
+    }
+
+    .bottom {
+    min-width: 828px;
+    width: 100%;
+    }
+}
+   
+
+/* S */
+@media screen and (max-width: 636px) {
+
+    .top {
+    min-width: 588px;
+    width: 100%;
+    }
+    
+    .bottom {
+    min-width: 588px;
+    width: 100%;
+    }
+}
 
 
 /* XS */
  @media screen and (max-width:550px) {
+
+    .top {
+    min-width: 502px;
+    width: 100%;
+    }   
     
+    .bottom {
+    min-width: 502px;
+    width: 100%;
+    
+        
+    }
+
+    .player {
+        .bar {
+            width: 130px;
+        }
+    
+        .bar-volume {
+            width: 85px;
+        }
+    }
+
     .show {
         display: none;
     }
@@ -315,6 +363,55 @@ body {
         
     }
 
+    .song-bar {
+        width: 100%;
+        max-width: 550px;
+        justify-content: center;
+
+        .song {
+
+            img {
+                width: 30px;
+            }
+
+            span {
+                font-size: 6px;
+            }
+            strong {
+                font-size: 8px;
+            }
+
+            .icon {
+                display: flex;
+                flex-direction: column;
+                font-size: 14px;
+                padding: 0.25rem;
+            }
+        }
+        
+        
+       
+    }
+
+    
+
+    .music-icon {
+        display: flex;  
+        justify-content: center;
+    
+        i {
+        padding-left: 0.25rem;
+        padding-right: 0.25rem;
+        color: white;
+        font-size: 12px;
+        align-self: center;
+        }
+
+        .fa-circle-play {
+            font-size: 24px;
+        } 
+    }
+    
     
  }
 
