--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ body {
     font-family: "Montserrat", serif;
     font-optical-sizing: auto;
     font-style: normal;
-    overflow: hidden;
     
 }
 /* TOP */
@@ -56,7 +55,8 @@ body {
     background-color: black;
     color: var(--sidebar-text);
     display: flex;
-    height: 100;
+    height: 100%;
+    overflow-y: hidden;
     /* da controllare */
   
 
@@ -180,6 +180,7 @@ body {
         position: sticky;
         height: 50px;
         top: 0;
+        z-index: 100;
 
         span {
             color: white;
@@ -251,15 +252,18 @@ body {
 
     .albums {
         flex-wrap: wrap;
-        gap: 0.5rem;
+        gap: 1rem;
         
 
         .album {
-            /* DA RIVEDERE HEIGHT E WIDTH */
             min-height: 180px;
             width: calc((100% / 12 * 2) - 1rem);
             margin-top: 0.5rem;
            
+        }
+
+        .cover {
+            position: relative;
         }
 
         img {
@@ -268,8 +272,16 @@ body {
 
             
         }
-/* DA RIVEDERE */
-        img:hover {
+
+        i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            font-size: 36px;
+        }
+
+        .cover:hover {
             .hidden {
                 display: block;
             }  
@@ -344,6 +356,8 @@ body {
         }
 
         .player {
+
+            width: 35%;
         
             .music-icon {
                 display: flex;  
@@ -398,7 +412,7 @@ body {
 
         .settings {
             display: flex;
-            width: 20%;
+            width: 15%;
 
             .logo-settings {
                 align-self: center;
