--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     color: var(--sidebar-text);
     display: flex;
     height: 100%;
-    overflow-y: hidden;
+    overflow-y: auto;
     /* da controllare */
   
     .logo {
@@ -70,6 +70,7 @@ body {
     nav {
         display: flex;
         flex-direction: column;
+        width: 100%;
 
     }
 
@@ -86,7 +87,6 @@ body {
                 padding-right: 0.5rem;
                 font-size: 23px;
                 vertical-align: middle;
-
             }
 
             a {
@@ -134,7 +134,8 @@ body {
 
     .profile {
         padding-bottom: 1rem;
-        width: 200px;
+        width: 100%;
+        padding-right: 1rem;
     
         .download {
             font-size: 12px;
@@ -199,6 +200,8 @@ body {
 
     .content {
         padding: 1rem;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
 
     nav {
@@ -226,6 +229,10 @@ body {
         }
     }
 
+    .recently-p {
+        flex-wrap: wrap;
+    }
+
     #create-for {
         margin-bottom: 0rem;
     }
@@ -246,13 +253,13 @@ body {
     }
 
     .albums {
-        flex-wrap: wrap;
         gap: 1rem; 
-
+        flex-wrap: wrap;
+  
         .album {
-            min-height: 180px;
             width: calc((100% / 12 * 2) - 1rem);
             margin-top: 0.5rem; 
+            flex-wrap: wrap;
         }
 
         .cover {
@@ -446,10 +453,17 @@ body {
     width: 100%;
     }
 
+    .album {
+        width: calc((100% / 12 * 3) - 1rem);
+        margin-top: 0.5rem; 
+        flex-wrap: wrap;
+    }
+
     .bottom {
     min-width: 830px;
     width: 100%;
     }
+
 }
    
 
