--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ body {
         padding: 1rem;
         flex-direction: column;
         flex-wrap: wrap;
+        
     }
 
     nav {
@@ -452,11 +453,15 @@ body {
     min-width: 830px;
     width: 100%;
     }
+    .main {
 
-    .album {
-        width: calc((100% / 12 * 3) - 1rem);
-        margin-top: 0.5rem; 
-        flex-wrap: wrap;
+        .albums {
+            .album {
+                width: calc((100% / 12 * 3) - 1rem);
+                margin-top: 0.5rem; 
+                flex-wrap: wrap;
+            }
+        }
     }
 
     .bottom {
@@ -468,11 +473,22 @@ body {
    
 
 /* S */
-@media screen and (max-width: 636px) {
+@media screen and (max-width: 639px) {
 
     .top {
-    min-width: 588px;
+    min-width: 591px;
     width: 100%;
+    }
+
+    .main {
+
+        .albums {
+            .album {
+                width: calc((100% / 12 * 6) - 1rem);
+                margin-top: 0.5rem; 
+                flex-wrap: wrap;
+            }
+        }
     }
     
     .bottom {
