--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ body {
         }
 
         .bar {
-            height: 5px;
+            height: 3px;
             width: 100%;
             background-color: var(--main-light);
             border-radius: 50px;
@@ -405,29 +405,30 @@ body {
 
         .settings {
             display: flex;
-            width: 15%;
+            width: 20%;
 
             .logo-settings {
                 align-self: center;
                 display: flex;
-                width: 50%;
+                
                 
                 i {
                     padding: 0.5rem;
+                    font-size: 12px;
                 }
             }
             
             .bar-volume {
-                height: 5px;
-                width: 100%;
+                height: 3px;
+                width: 70%;
                 background-color: var(--main-light);
                 border-radius: 50px;
-                margin: 1rem;
+                margin: 0.5rem;
             }
 
             .bar-volume:after {
                 content: '';
-                width: 20%;
+                width: 30%;
                 background-color: white;
                 display: block;
                 height: 100%;
