--- a/style.css
+++ b/style.css
@@ -272,6 +272,13 @@ body {
             display: block;  
         }
 
+        .overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.458);
+        }
+
         i {
             position: absolute;
             top: 50%;
