--- a/style.css
+++ b/style.css
@@ -219,8 +219,8 @@ body {
                 list-style: none;
                 margin-left: 0.5rem;
                 margin-right: 0.5rem;
-                padding-bottom: 0.25rem;
                 text-transform: capitalize;
+                margin-bottom: 1rem;
 
                 &:hover {
                     border-bottom: 1px solid var(--main-highligh);
@@ -358,6 +358,8 @@ body {
         .player {
 
             width: 35%;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
         
             .music-icon {
                 display: flex;  
@@ -415,19 +417,21 @@ body {
             width: 20%;
 
             .logo-settings {
-                align-self: center;
+                align-items: center;
                 display: flex;
+                width: 60%;
                 
                 
                 i {
-                    padding: 0.5rem;
+                    margin: 0.25rem;
                     font-size: 12px;
+                    vertical-align: middle;
                 }
             }
             
             .bar-volume {
                 height: 3px;
-                width: 70%;
+                width: 60%;
                 background-color: var(--main-light);
                 border-radius: 50px;
                 margin: 0.5rem;
@@ -435,7 +439,7 @@ body {
 
             .bar-volume:after {
                 content: '';
-                width: 30%;
+                width: 20%;
                 background-color: white;
                 display: block;
                 height: 100%;
@@ -469,11 +473,11 @@ body {
                 flex-wrap: wrap;
                 justify-content: space-around;
                 width: 100%;
+                
 
                 li:nth-child(6) {
                     flex-basis: 100%; 
                     text-align: center;
-                    padding-top: 1rem;
                 }
             }
         }
@@ -505,6 +509,20 @@ body {
 
     .main {
 
+        .type {
+
+            ul {
+                flex-wrap: wrap;
+                justify-content: space-around;
+                width: 100%;
+
+                li:nth-child(2n) {
+                    flex-basis: 30%; 
+                    text-align: center;
+                }
+            }
+        }
+
         .albums {
             .album {
                 width: calc((100% / 12 * 6) - 1rem);
@@ -517,7 +535,41 @@ body {
     .bottom {
     min-width: 588px;
     width: 100%;
+
+        .song-bar {
+            .song { 
+                width: 25%;
+                ul {
+                    img {
+                        width: 35px;                  
+                    }
+                    .icon {
+                        margin-left: 0.25rem;
+                        display: flex;
+                        flex-direction: column;
+                        font-size: 14px;
+                        padding: 0.25rem;
+                        i {
+                            padding: 0.1rem;
+                        }
+                    }
+                }
+            }
+
+            .player {
+                width: 40%;
+            }
+            .settings {
+                width: 25%;
+
+            }
+        }
+        
+
+        
     }
+    
+
 }
 
 
