--- a/style.css
+++ b/style.css
@@ -90,22 +90,40 @@ body {
             padding-top:0.25rem;
             padding-bottom: 0.25rem;
             
-
-            .fa-solid {
-                padding-right: 0.5rem;
-                font-size: 23px;
-                vertical-align: middle;
-            }
-
             a {
                 color: var(--sidebar-text);
                 text-decoration: none; 
-                font-size: 12px;   
+                font-size: 12px;  
 
                 &:hover {
                     color: var(--main-lighter);
                 }
+                
+                
+                img {
+                    padding-right: 0.5rem;
+                    height: 30px;
+                    display: inline-block;
+                    vertical-align: middle;
+                    opacity: 50%;  
+                    
+                    &:hover {
+                        opacity: 100;
+                    }
+                }
+
+                
+               
             }
+
+            #home-img {
+                opacity: 100%;
+            }
+
+            
+
+           
+            
         }
     }
 
@@ -364,8 +382,8 @@ body {
         .player {
 
             width: 35%;
-            margin-top: 1rem;
-            margin-bottom: 1rem;
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
         
             .music-icon {
                 display: flex;  
