edit overlay round

--- a/style.css
+++ b/style.css
@@ -314,6 +314,10 @@ body {
 
     .popular-artists {
 
+        .overlay {
+            border-radius: 50%;
+        }
+
         img {
             border-radius: 50%;
         }
