edit logo settings

--- a/style.css
+++ b/style.css
@@ -466,6 +466,7 @@ body {
                     margin: 0.25rem;
                     font-size: 12px;
                     vertical-align: middle;
+                    color: white;
                 }
             }
             
